# the-ray-tracer-challenge

./: .clang-format  .travis.yml  CMakeLists.txt
cmake/: CompilerWarnings.cmake
include/rtc/: vec.hpp
src/: vec.cpp  vec.hpp
tests/: CMakeLists.txt  tests.cpp  tests_vec_operations.cpp
